[gd_scene load_steps=12 format=3 uid="uid://bolui7l1oisu1"]

[ext_resource type="Texture2D" uid="uid://bquypxhjqqxa0" path="res://battle_scene/battle_background.png" id="1_i0o4p"]
[ext_resource type="Script" path="res://battle_scene/battle_scene.gd" id="1_r5piu"]
[ext_resource type="Texture2D" uid="uid://cfxkdlm6ydlv7" path="res://mockups/Battle UI Mockup.png" id="2_2y8pj"]
[ext_resource type="PackedScene" uid="uid://bl476pa5ernx5" path="res://ui/action_choice.tscn" id="2_f1npq"]
[ext_resource type="PackedScene" uid="uid://cir0hf6b30mxx" path="res://players/enemy_group.tscn" id="3_dc2lk"]
[ext_resource type="PackedScene" uid="uid://cpkpwy86k3he2" path="res://ui/skill_choice.tscn" id="4_166j1"]
[ext_resource type="PackedScene" uid="uid://bv8dkjaf6yr17" path="res://players/player_group.tscn" id="4_rbeni"]
[ext_resource type="PackedScene" uid="uid://c7d1vt1bnige2" path="res://ui/action_queue.tscn" id="5_s0ybd"]
[ext_resource type="AudioStream" uid="uid://dy4h0826wa26i" path="res://audio/kim-lightyear-just-a-dream-wake-up-153991.mp3" id="9_6o17c"]
[ext_resource type="PackedScene" uid="uid://crwce2voha8mt" path="res://menus/help_menu.tscn" id="10_w6e8n"]

[sub_resource type="LabelSettings" id="LabelSettings_p0inw"]
font_size = 5
font_color = Color(0, 0, 0, 1)

[node name="BattleScene" type="Node2D"]
script = ExtResource("1_r5piu")

[node name="Background" type="TextureRect" parent="."]
self_modulate = Color(0.823529, 0.823529, 0.823529, 1)
offset_right = 320.0
offset_bottom = 180.0
texture = ExtResource("1_i0o4p")
expand_mode = 1
metadata/_edit_lock_ = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HelpMenu" parent="CanvasLayer" instance=ExtResource("10_w6e8n")]
visible = false

[node name="InfoBackground" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -186.0
offset_top = -71.0
grow_horizontal = 0
grow_vertical = 0
color = Color(0.862745, 0.929412, 1, 1)

[node name="InfoLabel" type="Label" parent="CanvasLayer/InfoBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 6.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
text = "Lorem IpsumLorem IpsumLorem "
label_settings = SubResource("LabelSettings_p0inw")
autowrap_mode = 2

[node name="ActionType" parent="CanvasLayer" instance=ExtResource("2_f1npq")]
offset_left = 8.0
offset_top = -68.0
offset_right = 212.0
offset_bottom = 33.0

[node name="ActionQueue" parent="CanvasLayer" instance=ExtResource("5_s0ybd")]
offset_left = 61.0
offset_right = 77.0

[node name="SkillChoiceList" parent="CanvasLayer" instance=ExtResource("4_166j1")]
visible = false
offset_left = 7.0
offset_top = -68.0
offset_right = 260.0
offset_bottom = 32.0

[node name="Mockup" type="Sprite2D" parent="."]
visible = false
position = Vector2(226, 90)
scale = Vector2(0.221786, 0.194805)
texture = ExtResource("2_2y8pj")
metadata/_edit_lock_ = true

[node name="EnemyGroup" parent="." instance=ExtResource("3_dc2lk")]
position = Vector2(232, 56)

[node name="PlayerGroup" parent="." instance=ExtResource("4_rbeni")]
position = Vector2(35, 55)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_6o17c")

[node name="EnemyGroupLocation" type="Marker2D" parent="."]
position = Vector2(217, 53)

[node name="HelpButton" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0
theme_override_font_sizes/font_size = 8
text = "?"

[connection signal="next_player" from="." to="PlayerGroup" method="_on_battle_scene_next_player"]
[connection signal="focus_entered" from="CanvasLayer/ActionType/Incursion" to="." method="_on_incursion_focus_entered"]
[connection signal="pressed" from="CanvasLayer/ActionType/Incursion" to="." method="_on_incursion_pressed"]
[connection signal="focus_entered" from="CanvasLayer/ActionType/Refrain" to="." method="_on_refrain_focus_entered"]
[connection signal="pressed" from="CanvasLayer/ActionType/Refrain" to="." method="_on_refrain_pressed"]
[connection signal="focus_entered" from="CanvasLayer/ActionType/Dodge" to="." method="_on_dodge_focus_entered"]
[connection signal="pressed" from="CanvasLayer/ActionType/Dodge" to="." method="_on_dodge_pressed"]
[connection signal="pressed" from="HelpButton" to="." method="_on_help_button_pressed"]

[editable path="CanvasLayer/HelpMenu"]
[editable path="CanvasLayer/ActionType"]
[editable path="CanvasLayer/SkillChoiceList"]
